overlays/dev/web-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grwthy-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
