overlays/dev/whatsapp-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grwthy-whatsapp
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: whatsapp
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
